# examensarbete

./: .gitignore  .gitmodules  CMakeLists.txt  notes.txt  other_products.txt  processedAudio.txt  profile_data_spp.txt  profile_data_spp_buffer.txt  profile_data_spss.txt  profile_data_spss2.txt  profile_data_spss_buffer.txt  profile_data_spss_buffer_71kb_2.txt  tags  times_for_test_files.sav
.cache/clangd/index/: main.c.DDA25C14E6729244.idx
Effekt/: Sheet 1-A.csv  Sheet 1-T.csv  ble_energy.csv  ble_energy.xlsx
SPSS/: Output1.spv  Output2.spv  buffer_size_71KB.xlsx  buffer_size_for_41kb.sav  buffer_size_for_71kb.sav  buffer_size_for_both.sav  connection_times.sav  mean_energy_ble.sav  profile_data_spp.txt  profile_data_spp_buffer_71kb.txt  profile_data_spss_buffer.txt  profile_data_spss_buffer2.txt  profile_data_spss_buffer_71kb.txt  profile_data_spss_buffer_both_2.txt  table_mean_connection.xlsx  table_mean_energy_ble.xlsx  table_mean_energy_spp.xlsx  table_mean_sd_cv.xlsx  times_for_test_files.sav
c/: main.c
c/remedy/: rem.rdbg
commands/: buildC.bat  buildEsp.bat  buildTime.bat  runCommand.bat
cpp/: main.cpp
cpp/remedy/: rem.rdbg
cpp/src/: audio_processing.cpp  audio_processing.h  main.cpp  utils.cpp
desktop/src/: audio_processing.cpp  main.cpp  utils.h
diagram_script/: gatetriggercv.py  plot_waveform.py
esp32/ble_application/: application.cpp  application.h  ble.cpp  ble.h  bluetooth.h  wave_table.h
esp32/spp_application/: application.cpp  application.h  wave_table.cpp
hardware/: README.md
hardware/Bluetooth_Wavetable_Oscillator/: Bluetooth_Wavetable_Oscillator.kicad_pcb  Bluetooth_Wavetable_Oscillator.kicad_pro  Bluetooth_Wavetable_Oscillator.kicad_sch  input.kicad_sch  output.kicad_sch  power.kicad_sch
hardware/Libraries/1.5inch_RGB_OLED_Module.pretty/: 1.5inch_RGB_OLED_Module.kicad_mod
hardware/Libraries/10_pin_eurorack_connector.pretty/: 10_pin_eurorack_connector.kicad_mod
hardware/Libraries/6Pin-Switch-Button.pretty/: 6Pin-Switch-Button.kicad_mod
hardware/Libraries/ESP32.pretty/: ESP32.kicad_mod
hardware/Libraries/Trimmer-potentiometer.pretty/: Trimmer-potentiometer.kicad_mod
hardware/Libraries/esp32/symbols/: Espressif.kicad_sym
java/usersideapp/: output  pom.xml  processedAudio.txt
java/usersideapp/src/main/java/: module-info.java
java/usersideapp/src/main/java/com/userside/: App.java  PrimaryController.java  SecondaryController.java  WavFileProcessor.java
java/usersideapp/src/main/resources/: chart-style.css
java/usersideapp/src/main/resources/com/userside/: chart-style.css  primary.fxml
python/: main.py
sketch_nov6a/: application1.cpp
sketch_nov6a/ble_application/: application.cpp  ble.cpp  ble.h  wave_table.cpp  wave_table.h
sketch_nov6a/bluetooth_and_screen/: application.cpp  ble.cpp  ble.h  bluetooth.cpp  bluetooth_and_screen.ino  oled_screen.cpp  oled_screen.h  spp.cpp  spp.h  wave_table.cpp  wave_table.h
sketch_nov6a/first_pass/: first_pass.ino  wave_table.cpp  wave_table.h
sketch_nov6a/spp_application/: application.cpp  bluetooth.h  define.h  spp.cpp  spp.h  wave_table.h
sketch_nov6a/wifi_application/: application.cpp  server.cpp  server.h  wave_table.cpp  wifi_application.ino
src/: MCP4822.c  MCP4822.h  main.c  pinDefinitions.h
